syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog{
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest{
    Blog blog = 1;
}

message CreateBlogResponse{
    Blog blog = 1; // will have blog id
}

message ReadBlogRequest{
    string blog_id = 1;
}

message ReadBlogResponse{
    Blog blog = 1;
}

message UpdateBlogRequest{
    Blog blog = 1;
}

message UpdateBlogResponse{
    Blog blog = 1;
}


service BlogService{
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
    rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);
}